namespace MiniMart.Models.Enums
{
    public enum PaymentMethod
    {
        Cash = 1,
        BankTransfer = 2,
        CreditCard = 3,
    }
}