namespace MiniMart.Models.Base
{
    public class BaseEntity
    {
    }
}
