namespace MiniMart.Models.Enums
{
    public enum OrderStatus
    {
        Pending = 1,
        Completed = 2,
        Cancelled = 3
    }
}