namespace MiniMart.Models.Enums
{
    
        public enum PromotionType
        {
            PercentDiscount,    // reduce % of order/product price
            BuyXGetYFree,       // buy 1 gift 1, buy 2 gift 1, etc.
        }
    }

