namespace MiniMart.Repositories.RepoInterface
{
    public interface ICustomerRepository
    {
    }
}
