namespace MiniMart.Repositories.RepoInterface
{
    public interface IProductRepository
    {
    }
}
